Switched to SAP material library

--- a/FbxImporter/Views/MeshImportOptionsView.axaml
+++ b/FbxImporter/Views/MeshImportOptionsView.axaml
@@ -4,23 +4,19 @@
                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                      xmlns:rxui="http://reactiveui.net"
                      xmlns:vm="clr-namespace:FbxImporter.ViewModels"
-                     xmlns:m="clr-namespace:FbxImporter.Models"
                      mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="300"
                      x:TypeArguments="vm:MeshImportOptionsViewModel" 
                      x:Class="FbxImporter.Views.MeshImportOptionsView"
                      WindowStartupLocation="CenterOwner"
                      Height="300"
                      Width="200">
-    <!-- <Design.DataContext> -->
-    <!--     <vm:MeshImportOptionsViewModel/> -->
-    <!-- </Design.DataContext> -->
 
     <ScrollViewer>
         <Grid RowDefinitions="40, Auto, *, 40" Margin="5">
             <ComboBox Items="{Binding Materials}" SelectedItem="{Binding SelectedMaterial}" Grid.Row="0">
                 <ComboBox.ItemTemplate>
-                    <DataTemplate DataType="m:MaterialInfo">
-                        <TextBlock Text="{Binding Name}" />
+                    <DataTemplate DataType="vm:MaterialEntry">
+                        <TextBlock Text="{Binding MTD}" />
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
