--- a/FbxImporter/Views/ClothDataSelectorView.axaml
+++ b/FbxImporter/Views/ClothDataSelectorView.axaml
@@ -11,19 +11,27 @@
                      Height="300"
                      Width="200"
                      CanResize="False">
-    <!-- <Design.DataContext> -->
-    <!--     <vm:ClothDataSelectorViewModel/> -->
-    <!-- </Design.DataContext> -->
+     <Design.DataContext> 
+         <vm:ClothDataSelectorViewModel/>
+     </Design.DataContext> 
     
     <Grid RowDefinitions="Auto, 3*, *, 40" Margin="5">
         <TextBlock Text="Cloth Data" FontSize="14" Margin="2" Grid.Row="0"/>
-        <ListBox Items="{Binding ClothData}" SelectionMode="Single" SelectedItem="{Binding SelectedClothData}" Grid.Row="1">
-            <ListBox.ItemTemplate>
-                <DataTemplate DataType="vm:ClothData">
+        <TreeView Items="{Binding ClothData}" SelectionMode="Single" SelectedItem="{Binding SelectedSkinOperatorData}" Grid.Row="1">
+            <TreeView.DataTemplates>
+                <TreeDataTemplate DataType="vm:ClothData" ItemsSource="{Binding SkinOperators}">
                     <TextBlock Text="{Binding Name}"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+                </TreeDataTemplate>
+                <TreeDataTemplate DataType="vm:SkinOperator">
+                    <TextBlock Text="{Binding Name}"/>
+                </TreeDataTemplate>
+            </TreeView.DataTemplates>
+            <TreeView.Styles>
+                <Style Selector="TreeView>TreeViewItem">
+                    <Setter Property="Focusable" Value="False"/>
+                </Style>
+            </TreeView.Styles>
+        </TreeView>
         <CheckBox Content="Mirror X" IsChecked="{Binding MirrorX}" Grid.Row="2"/>
         <Grid ColumnDefinitions="*, *" Grid.Row="3">
             <Button Content="Select" Command="{Binding SelectClothDataCommand}" Margin="2, 0, 0, 0" IsEnabled="{Binding SelectedClothData, Converter={x:Static ObjectConverters.IsNotNull}}" Grid.Column="1"/>
