--- a/FbxImporter/Views/MeshImportOptionsView.axaml
+++ b/FbxImporter/Views/MeshImportOptionsView.axaml
@@ -16,7 +16,7 @@
             <StackPanel Grid.Row="2" Margin="0, 10">
                 <!--<CheckBox Content="Create Default Bone" IsChecked="{Binding CreateDefaultBone}"/>-->
                 <CheckBox Content="Mirror" IsChecked="{Binding MirrorX}"/>
-                <!--<CheckBox Content="Cloth Mesh" IsChecked="{Binding IsCloth}" IsVisible="False"/>-->
+                <CheckBox Content="Skinned Mesh" IsChecked="{Binding IsSkinned}" ToolTip.Tip="Enable for skinned meshes, disable for static meshes."/>
             </StackPanel>
             <Grid ColumnDefinitions="*, *" Grid.Row="3">
                 <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="0, 0, 2, 0" Grid.Column="0" />
