--- a/FbxImporter/Views/MeshImportOptionsView.axaml
+++ b/FbxImporter/Views/MeshImportOptionsView.axaml
@@ -8,17 +8,22 @@
                      x:TypeArguments="vm:MeshImportOptionsViewModel" 
                      x:Class="FbxImporter.Views.MeshImportOptionsView"
                      WindowStartupLocation="CenterOwner"
-                     Height="300"
-                     Width="200">
+                     Title="Mesh Import Options"
+                     Height="400"
+                     Width="300"
+                     CanResize="False">
     <ScrollViewer>
-        <Grid RowDefinitions="40, Auto, *, 40" Margin="5">
-            <ComboBox Items="{Binding Materials}" SelectedItem="{Binding SelectedMaterial}" VirtualizationMode="Simple" IsTextSearchEnabled="True" Grid.Row="0"/>
-            <StackPanel Grid.Row="2" Margin="0, 10">
+        <Grid RowDefinitions="40, 200, 40, 40, 40" Margin="5">
+            <TextBox Text="{Binding Filter}" Grid.Row="0" Margin="5"/>
+            <ListBox Items="{Binding FilteredMaterials}" SelectedItem="{Binding SelectedMaterial}" 
+                     VirtualizationMode="Simple" SelectionMode="Single" Grid.Row="1" Margin="5"/>
+            <TextBox Text="{Binding SelectedMaterial}" IsEnabled="False" Grid.Row="2" Margin="5"/>
+            <StackPanel Grid.Row="3" Margin="0, 10">
                 <!--<CheckBox Content="Create Default Bone" IsChecked="{Binding CreateDefaultBone}"/>-->
-                <CheckBox Content="Mirror" IsChecked="{Binding MirrorX}"/>
-                <CheckBox Content="Skinned Mesh" IsChecked="{Binding IsSkinned}" ToolTip.Tip="Enable for skinned meshes, disable for static meshes."/>
+                <CheckBox Content="Mirror" IsChecked="{Binding MirrorZ}" ToolTip.Tip="Inverts the Z-scale of the model."/>
+                <CheckBox Content="Static Mesh" IsChecked="{Binding IsStatic}" ToolTip.Tip="Enable if the mesh is not deformed by a skeleton and does not contain bone weights."/>
             </StackPanel>
-            <Grid ColumnDefinitions="*, *" Grid.Row="3">
+            <Grid ColumnDefinitions="*, *" Grid.Row="4">
                 <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="0, 0, 2, 0" Grid.Column="0" />
                 <Button Content="Ok" Command="{Binding ConfirmCommand}" Margin="2, 0, 0, 0" Grid.Column="1" />
             </Grid>
