--- a/FbxImporter/Views/MainWindow.axaml
+++ b/FbxImporter/Views/MainWindow.axaml
@@ -42,15 +42,15 @@
         <Menu DockPanel.Dock="Top" Height="30">
             <MenuItem Header="_File">
                 <MenuItem.Items>
-                    <MenuItem Header="_Open" HotKey="Ctrl+O" Command="{Binding OpenFlverCommand}"/>
-                    <MenuItem Header="_Save" HotKey="Ctrl+S" Command="{Binding SaveFlverCommand}"/>
-                    <MenuItem Header="Save As..." HotKey="Ctrl+Shift+S" Command="{Binding SaveFlverAsCommand}"/>
-                    <MenuItem Header="_Import Fbx" HotKey="Ctrl+I" Command="{Binding ImportFbxCommand}"/>
+                    <MenuItem Header="_Open" ToolTip.Tip="Ctrl+O" Command="{Binding OpenFlverCommand}"/>
+                    <MenuItem Header="_Save" ToolTip.Tip="Ctrl+S" Command="{Binding SaveFlverCommand}"/>
+                    <MenuItem Header="Save As..." ToolTip.Tip="Ctrl+Shift+S" Command="{Binding SaveFlverAsCommand}"/>
+                    <MenuItem Header="_Import Fbx" ToolTip.Tip="Ctrl+I" Command="{Binding ImportFbxCommand}"/>
                 </MenuItem.Items>
             </MenuItem>
             <MenuItem Header="_Edit">
-                <MenuItem Header="_Undo" HotKey="Ctrl+Z" Command="{Binding UndoCommand}"/>
-                <MenuItem Header="_Redo" HotKey="Ctrl+Shift+Z" Command="{Binding RedoCommand}"/>
+                <MenuItem Header="_Undo" ToolTip.Tip="Ctrl+Z" Command="{Binding UndoCommand}"/>
+                <MenuItem Header="_Redo" ToolTip.Tip="Ctrl+Y" Command="{Binding RedoCommand}"/>
             </MenuItem>
         </Menu>
         <Border DockPanel.Dock="Bottom" 
@@ -60,6 +60,8 @@
                 <ListBox IsEnabled="False" BorderThickness="0" Items="{Binding Log}"/>
             </ScrollViewer>
         </Border>
+        <Grid>
+            
         <Grid ColumnDefinitions="*, *">
             <Border Margin="10, 10, 10, 0" Classes="inner" Grid.Column="0">
                 <Grid RowDefinitions="*, 6*, *" Margin="15, 0, 15, 10" >
@@ -70,7 +72,7 @@
                                     BorderThickness="{DynamicResource ThemeBorderThickness}"
                                     Grid.Row="1"/>
                     <Grid ColumnDefinitions="*, *" Grid.Row="2" Grid.Column="0">
-                        <Button Content="Delete Mesh" ToolTip.Tip="Delete the selected mesh" HotKey="Delete"
+                        <Button Content="Delete Mesh" ToolTip.Tip="Delete the selected mesh"
                                 Command="{Binding Flver.DeleteMeshCommand}"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="2"
@@ -89,11 +91,32 @@
                     <Button Content="Add To Flver"
                             ToolTip.Tip="Add the selected fbx mesh to the current flver file."
                             Command="{Binding AddToFlverCommand}"
-                            IsEnabled="{Binding CanAddToFlver}"
                             Grid.Row="2"
                             Margin="0, 5, 0, 0"/>
                 </Grid>
             </Border>
         </Grid>
+            <Border Background="{DynamicResource ThemeControlTransparentBrush}"  IsVisible="{Binding Progress.IsActive}">
+                <Border BorderBrush="{DynamicResource ThemeBorderHighBrush}" BorderThickness="1"
+                        Background="{DynamicResource ThemeBackgroundBrush}"
+                        Width="300" Height="60" HorizontalAlignment="Center" VerticalAlignment="Center"
+                        IsHitTestVisible="True">
+                    <Grid RowDefinitions="1.5*, *" Margin="5">
+                        <TextBlock Text="{Binding Progress.Status}" VerticalAlignment="Center" Grid.Row="0" />
+                        <ProgressBar IsIndeterminate="True" Grid.Row="1" />
+                    </Grid>
+                </Border>
+            </Border>
+        </Grid>
     </DockPanel>
+    <Window.KeyBindings>
+        <KeyBinding Gesture="Ctrl+O" Command="{Binding OpenFlverCommand}" />
+        <KeyBinding Gesture="Ctrl+I" Command="{Binding ImportFbxCommand}" />
+        <KeyBinding Gesture="Ctrl+S" Command="{Binding SaveFlverCommand}" />
+        <KeyBinding Gesture="Ctrl+Shift+S" Command="{Binding SaveFlverAsCommand}" />
+        <KeyBinding Gesture="Ctrl+Z" Command="{Binding UndoCommand}" />
+        <KeyBinding Gesture="Ctrl+Y" Command="{Binding RedoCommand}" />
+        <KeyBinding Gesture="Enter" Command="{Binding AddToFlverCommand}" />
+        <KeyBinding Gesture="Delete" Command="{Binding Flver.DeleteMeshCommand}" />
+    </Window.KeyBindings>
 </rxui:ReactiveWindow>
