--- a/FbxImporter/Views/MeshImportOptionsView.axaml
+++ b/FbxImporter/Views/MeshImportOptionsView.axaml
@@ -35,8 +35,13 @@
                           Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right"/>
             </Grid>
             <Grid ColumnDefinitions="*, *" Grid.Row="4">
-                <Button Content="Cancel" Command="{Binding CancelCommand}" Margin="0, 0, 2, 0" HotKey="Escape" Grid.Column="0" />
-                <Button Content="Ok" Command="{Binding ConfirmCommand}" Margin="2, 0, 0, 0" HotKey="Enter" Grid.Column="1" />
+                <Button Content="Cancel" Command="{Binding CancelCommand}" ToolTip.Tip="Shortcut: Esc" Margin="0, 0, 2, 0" Grid.Column="0" />
+                <Button Content="Ok" Command="{Binding ConfirmCommand}" ToolTip.Tip="Shortcut: Enter" Margin="2, 0, 0, 0" Grid.Column="1" />
             </Grid>
-        </Grid></ScrollViewer>
+        </Grid>
+    </ScrollViewer>
+    <Window.KeyBindings>
+        <KeyBinding Gesture="Escape" Command="{Binding CancelCommand}" />
+        <KeyBinding Gesture="Enter" Command="{Binding ConfirmCommand}" />
+    </Window.KeyBindings>
 </rxui:ReactiveWindow>
