--- a/FbxImporter/Views/MeshImportOptionsView.axaml
+++ b/FbxImporter/Views/MeshImportOptionsView.axaml
@@ -26,8 +26,8 @@
             <Grid RowDefinitions="30, 30, 30, 30" ColumnDefinitions="*, *" Grid.Row="3" Margin="5">
                 <TextBlock Text="Mirror" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
                 <CheckBox IsChecked="{Binding MirrorZ}" ToolTip.Tip="Inverts the Z-scale of the model." Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right"/>
-                <TextBlock Text="Reverse Facesets" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0"/>
-                <CheckBox IsChecked="{Binding ReverseFacesets}" ToolTip.Tip="Reverses the facesets of the model." Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right"/>
+                <TextBlock Text="Flip Faces" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0"/>
+                <CheckBox IsChecked="{Binding FlipFaces}" ToolTip.Tip="Flips the faces of the model." Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right"/>
                 <TextBlock Text="Weighting Mode" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0"/>
                 <ComboBox Items="{Binding WeightingModes}" SelectedItem="{Binding Weighting}" Grid.Row="2" Grid.Column="1">
                     <ComboBox.DataTemplates>
